Thu Jan 01 00:50:23 PST 2004  Christian Hammond <chipx86@gnupdate.org>

	* Copyright Commit 2004.

Sat Nov 22 00:59:44 PST 2003  Christian Hammond <chipx86@gnupdate.org>

	* NEWS:
	* mkstuff.conf:
	  - Release 0.4.

Fri Nov 21 23:30:52 PST 2003  Christian Hammond <chipx86@gnupdate.org>

	* mkipk.sh:
	  - Require libopie.

Sun Nov 16 14:55:02 PST 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimConvWindow.cpp:
	  - Don't increment the active notification count when a single
	    conversation is notifying multiple times. This way, the LED
	    doesn't get stuck.

Sun Nov 16 01:22:49 PST 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimConvWindow.cpp:
	* src/QGaimConvWindow.h:
	  - Message notification should now activate whenever a message is
	    sent to the non-active window.

Sun Nov 16 01:13:58 PST 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimConvWindow.cpp:
	  - Stop the new message notification when the tab is selected.

Sun Nov 16 01:01:29 PST 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimConvWindow.cpp:
	* src/QGaimConvWindow.h:
	* src/QGaimNotify.cpp:
	* src/QGaimPrefsDialog.cpp:
	* src/QGaimPrefsDialog.h:
	  - Added message notification optionally using the buzzer and LED.

Sat Nov 15 23:56:54 PST 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimConvWindow.cpp:
	* src/QGaimConvWindow.h:
	* src/QGaimMainWindow.cpp:
	* src/QGaimNotify.cpp:
	* src/QGaimNotify.h:
	  - Added the base functionality for message notification.

Sat Nov 15 22:16:48 PST 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimPrefsDialog.cpp:
	  - Fixed a crash when closing the preferences dialog.

Sat Nov 15 22:11:27 PST 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimPrefsDialog.cpp:
	  - Fixed a crash when building the Buddy List prefs page.

Sat Nov 15 22:06:12 PST 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimBuddyList.cpp:
	  - Replaced some glib calls with their Qt equivalents.
